# starsector-mod-api

./: .gitignore  Cargo.toml  README.md
starsector-mod-info/: Cargo.toml  wrangler.toml
starsector-mod-info-auth/: Cargo.toml  wrangler.toml
starsector-mod-info-auth/src/: lib.rs
starsector-mod-info-auth/src/generate/: mod.rs
starsector-mod-info-shared/: Cargo.toml
starsector-mod-info-shared/src/: lib.rs  worker_result_ext.rs
starsector-mod-info-shared/src/amqp/: mod.rs
starsector-mod-info-shared/src/cache/: mod.rs
starsector-mod-info-shared/src/middleware/: authentication.rs  mod.rs  rate_limit.rs
starsector-mod-info-shared/src/mod_info/: durable_mod.rs  mod.rs
starsector-mod-info-shared/src/user/: mod.rs  trusted.rs
starsector-mod-info-storage/: Cargo.toml  wrangler.toml
starsector-mod-info-storage/src/: lib.rs
starsector-mod-info-storage/src/persist/: mod.rs
starsector-mod-info/src/: lib.rs
starsector-mod-info/src/installed_mods/: mod.rs
starsector-mod-info/src/mod_data/: mod.rs
