[workspace]
members = [
  "starsector-mod-info",
  "starsector-mod-info-storage",
  "starsector-mod-info-shared",
  "starsector-mod-info-auth",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[workspace.dependencies]
# External
worker = { git = "https://github.com/cloudflare/workers-rs.git", rev = "b55bb592ee6dbf11fa1971f2c93055ab121393b6" }
serde_json = "1.0.67"
cfg-if = "0.1.2"
base64 = "0.13.0"
serde = { version = "1.0.142", features = ["derive"] }
serde-aux = "3.1.0"
futures-util = { version = "0.3.21", default-features = false }
chrono = { version = "0.4.19", default-features = false, features = ["wasmbind", "serde"] }
uuid = { version = "1.1.2", features = ["serde", "v4", "js"] }
strum = { version = "0.24.1", features = ["derive"] }
rand = "0.8.5"
getrandom = { version = "0.2.8", features = ["js"] }

console_error_panic_hook = { version = "0.1.1" }