[package]
name = "starsector-mod-info-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.67"
serde-aux = "3.1.0"
base64 = "0.13.0"
worker = { git = "https://github.com/atlanticaccent/workers-rs.git", branch = "r2-bindings-cont" }
futures-util = { version = "0.3.21", default-features = false }
chrono = { version = "0.4.19", default-features = false, features = ["wasmbind", "serde"] }
uuid = { version = "1.1.2", features = ["serde"] }
