[package]
name = "starsector-mod-info-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde-aux.workspace = true
base64.workspace = true
worker.workspace = true
futures-util.workspace = true
chrono.workspace = true
uuid.workspace = true
strum.workspace = true
rand.workspace = true
getrandom.workspace = true
