[package]
name = "starsector-mod-info-storage"
version = "0.1.0"
authors = ["Iain Laird <iain@laird.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if.workspace = true
worker.workspace = true
serde_json.workspace = true

# Internal
starsector-mod-info-shared = { path = "../starsector-mod-info-shared" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { workspace = true, optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
