[package]
name = "starsector-mod-info"
version = "0.1.0"
authors = ["Iain Laird <iain@laird.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = { git = "https://github.com/atlanticaccent/workers-rs.git", branch = "r2-bindings-cont" }
serde_json = "1.0.67"
base64 = "0.13.0"

# Internal
starsector-mod-info-shared = { path = "../starsector-mod-info-shared" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }
